--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,8 +1,22 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: url("../images/background.jpg") no-repeat center center/cover;
+}
 h1 {
   text-align: center;
 }
 #myChart {
   margin: auto;
+  background-color: darkkhaki;
+  opacity: 0.7;
 }
 #none {
   display: none;
@@ -15,6 +29,7 @@ h1 {
   border-radius: 50%;
   height: 5rem;
   width: 5rem;
+  margin: auto;
   animation: spinin 1s infinite linear;
 }
 @keyframes spinin {
@@ -31,4 +46,17 @@ h1 {
   justify-content: center;
   margin: 3rem;
   gap: 1rem;
+}
+.continent {
+  color: white;
+  background-color: chocolate;
+  border: none;
+  padding: 0.2rem 1rem;
+}
+
+.specific {
+  color: white;
+  background-color: rgb(14, 14, 100);
+  border: none;
+  padding: 0.2rem 1rem;
 }
