--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 body {
+  height: 100vh;
   background: url("../images/background.jpg") no-repeat center center/cover;
 }
 h1 {
